# cpp-Labs

./: README.md
labwork1-LogAnalyzer/: .gitignore  README.md  main.cpp
labwork2-uint239/: .gitignore  README.md
labwork2-uint239/lib/: number.cpp  number.h
labwork2-uint239/tests/: number_test.cpp
labwork3-SandPile/: .gitignore  CMakeLists.txt  README.md  bmp.cpp  bmp.h  main.cpp  parser.cpp  parser.h  sandpile.cpp  sandpile.h
labwork4-Parser/: README.md
labwork4-Parser/lib/: ArgParser.cpp  ArgParser.h
labwork4-Parser/tests/: argparser_test.cpp
labwork5-Battleship/: CMakeLists.txt  Field.cpp  Field.h  Game.cpp  Game.h  README.md  Strategy.cpp  Strategy.h  load_file.txt  main.cpp
labwork5-Battleship/tests/: CMakeLists.txt  test_game.cpp
